# sacoma-assistant

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/sacoma_scale/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  session.py  strings.json  users.py
custom_components/sacoma_scale/translations/: en.json
tests/: __init__.py  conftest.py  test_decode_pipeline.py  test_encoder_handshake.py  test_manifest.py  test_users.py
